<resources>
    <string name="app_name_store" translatable="false">Voice Changer</string>

    <string name="facebook_app_id" translatable="false">658479892893626</string>
    <string name="facebook_client_token" translatable="false">4581f4e98590e6488d30a686ee373133</string>
    <string name="txt_voice" translatable="false">Voice</string>
    <string name="txt_changer" translatable="false">Changer</string>
    <string name="text_on_boarding_1">Change voice to funny sounds</string>
    <string name="text_on_boarding_2">Voice converted to loudspeaker</string>
    <string name="text_on_boarding_3">Chipmunk &amp; robot sounds</string>

    <string name="language">Language</string>
    <string name="learn_more">Learn more</string>
    <string name="settings">Settings</string>
    <string name="thank_you">Thank you</string>
    <string name="rate">Rate</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="this_action_can_contain_ads">This action can contain ads…</string>
    <string name="try_again">Try again!</string>
    <string name="install">Install</string>
    <string name="maybe_later">Maybe later</string>
    <string name="submit">Submit</string>
    <string name="first_content_rate">We work hard to bring a better user experience.</string>
    <string name="second_content_rate">We work hard to bring a better user experience.</string>
    <string name="do_you_like_our_app">We appreciate you rating us!</string>
    <string name="write_your_feedback">Write your feedback…</string>
    <string name="please_check_the_internet_or_vpn_and_try_again">Please check the Internet or VPN and try again</string>
    <string name="please_wait">Please wait!</string>
    <string name="processing_your_pack">Processing your pack…</string>
    <string name="start_like_a_pro">START LIKE A PRO</string>

    <string name="free">Free</string>
    <string name="s_continue">Continue</string>
    <string name="i_m_ok_with_ads">I’m OK with Ads</string>
    <string name="forever">Forever</string>
    <string name="include_ads">Include Ads</string>
    <string name="loading">Loading</string>
    <string name="name_exits">Name already exists</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="name_unchange">Name unchanged</string>
    <string name="file_not_exist">File doesn\'t exist</string>
    <string name="record_amp_changer"><![CDATA[Record & Changer]]></string>
    <string name="cancel">Cancel</string>
    <string name="dialog_request_permission"><![CDATA[If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
    <string name="process_error">In progress, please wait a moment.</string>
    <string name="open_file_to_change_voice">Open file to change voice</string>
    <string name="sound_effect">Edit Sounds</string>
    <string name="my_works">My Works</string>
    <string name="all_changed_voices_saved_here">All changed voices saved here</string>
    <string name="recording_tap_to_stop">Recording - Tap to stop</string>
    <string name="record_audio">Record Audio</string>
    <string name="press_the_button_to_record">Press the button to record</string>
    <string name="title_activity_change_voice">ChangeVoiceActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="processing_in_progress">Processing in progress, please try again later</string>
    <string name="voice_effects">Voice Effects</string>
    <string name="save">Save</string>
    <string name="save_success">Save successfully</string>
    <string name="save_fail">Save failure</string>
    <string name="select_file">Select file</string>
    <string name="basic">Basic</string>
    <string name="equalizer">Equalizer</string>
    <string name="reverb">Reverb</string>
    <string name="panning">Panning</string>
    <string name="tempo_rate">Tempo Rate</string>
    <string name="tempo_pitch">Tempo Pitch</string>
    <string name="_500hz">500Hz</string>
    <string name="_1000hz">1000Hz</string>
    <string name="_2000hz">2000Hz</string>
    <string name="_3000hz">3000Hz</string>
    <string name="_4000hz">4000Hz</string>
    <string name="_5000hz">5000Hz</string>
    <string name="_6000hz">6000Hz</string>
    <string name="_7000hz">7000Hz</string>
    <string name="_8000hz">8000Hz</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="gain">Gain</string>
    <string name="in_gain">In Gain</string>
    <string name="out_gain">Out Gain</string>
    <string name="delay">Delay</string>
    <string name="decay">Decay</string>
    <string name="no_audio_files">No audio files</string>
    <string name="no_results">No results</string>
    <string name="voice_name">Voice Name</string>
    <string name="audio_saved">Audio saved</string>
    <string name="play">Play</string>
    <string name="allow">Allow</string>
    <string name="txt_pms_audios">We need permission to access your audios</string>
    <string name="set_as_a_ringtone">Set as a ringtone</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="setting_success">Set up success</string>
    <string name="request_write_setting">Please grant permissions to take action</string>
    <string name="enter_file_name_here">Enter file name here</string>
    <string name="txt_delete_confirm">The audio will be completely deleted from your device.</string>
    <string name="pause">Pause</string>
    <string name="tips_on_changing_voice">Tips on changing voice</string>
    <string name="the_audio_will_be_your_ringtone">The audio will be your ringtone</string>
    <string name="got_it">Got it</string>
    <string name="txt_ringtone_confirm">The audio will be your ringtone</string>
    <string name="txt_write_settings_pms">We need permission to manage ringtones, please authorize</string>
    <string name="txt_record_pms">We need permission to record audio</string>
    <string name="storage_permission">STORAGE PERMISSION</string>
    <string name="change_voice">Change Voice</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="ok">OK</string>
    <string name="ringtone">Ringtone</string>
    <string name="voice">Voice</string>
    <string name="changer">Changer</string>

    <string name="zero_time" translatable="false">00:00:00</string>
    <string name="play_time" translatable="false">00:00</string>
    <string name="rate_us">Rate</string>
    <string name="privacy">Privacy Policy</string>
    <string name="feedback_us">Feedback</string>
    <string name="share">Share App</string>
    <string name="loading2">Loading...</string>
</resources>