<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingBottom="@dimen/_16sdp"
    android:background="@drawable/bg_radius_16"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_as_a_ringtone"
            android:textColor="#303030"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/quicksand_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/txt_ringtone_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_content">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/cancel"
                android:gravity="center"
                android:background="@drawable/ic_bg_action_allow"
                android:backgroundTint="#F5F5F5"
                android:textColor="#A3A3A3"
                android:singleLine="true"
                android:includeFontPadding="false"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/quicksand_bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:gravity="center"
                android:singleLine="true"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:background="@drawable/ic_bg_action_allow"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/quicksand_bold"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>