<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_16"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingBottom="@dimen/_16sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_116sdp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo_pms_storage_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/storage_permission"
            android:textColor="#303030"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/txt_pms_audios"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_content">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_bg_action_allow"
                android:backgroundTint="#F5F5F5"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:visibility="gone"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_10sdp"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="#A3A3A3"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/btn_allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_bg_big_action_allow"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_10sdp"
                android:singleLine="true"
                android:text="@string/allow"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>